[package]
name = "frontmatter-mcp"
version = "0.1.0"
edition = "2024"
description = "Surgical YAML frontmatter patcher for Markdown/Obsidian files — CLI + MCP server in one binary"
license-file = "LICENSE.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "front"
path = "src/main.rs"

[dependencies]
rmcp = { version = "2.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.27.0"
