[package]
name = "frontmatter-mcp"
version = "0.1.0"
edition = "2024"
description = "Surgical YAML frontmatter patcher for Markdown/Obsidian files — CLI + MCP server in one binary"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "frontmatter"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
rmcp = { version = "2.2", features = ["server", "transport-io"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.27.0"
